update : feat(manajemen-akun), setup ci/cd
